--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: darkgrey; 
+}
 .App {
   text-align: center;
 }
@@ -7,6 +21,18 @@
   pointer-events: none;
 }
 
+.pd {
+  padding: 30px;
+}
+
+.mt {
+  margin-top: 100px;
+}
+
+.margin {
+  margin-right: 20px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,13 +40,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffab73;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
