--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,17 +12,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: darkgrey; 
 }
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .pd {
-  padding: 30px;
+  padding: 15px;
 }
 
 .mt {
@@ -33,29 +25,6 @@
   margin-right: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #ffab73;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.border-left {
+  border-left: #ffab73 solid 1px;
 }
